--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/mocha": "^10.0.8",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@types/redux-mock-store": "^1.0.6",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
@@ -37,6 +38,7 @@
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.47",
+    "redux-mock-store": "^1.5.4",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
